# Linnaeus

./: .gitignore  README.md  YCB-dataset.yaml  classes.txt  poetry.toml  pyproject.toml
cli/: classes.txt  pyproject.toml
cli/fcos/: __main__.py
cli/fcos/cli/: predict.py
cli/linnaeus/: __main__.py
cli/linnaeus/cli/: fix_models.py  predict.py
core/: pyproject.toml
core/fcos/core/loaders/: folder_data_set_loader.py
core/fcos/core/mAP/: __init__.py  functions.py
core/linnaeus/core/: data_augmentation.py
core/linnaeus/core/loaders/: __init__.py  class_loader.py  folder_data_set_loader.py
core/linnaeus/core/mAP/: classes.py  functions.py
core/linnaeus/core/models/: fcos.py
linnaeus/: __main__.py  linnaeus_ultima.py
linnaeus/cli/: predict.py
linnaeus/core/loaders/: __init__.py  class_loader.py  folder_data_set_loader_yolo.py
linnaeus/core/models/: fcos.py
linnaeus/train/: train.py
linnaeus/train/loss/: __init__.py  fcos_loss.py  iou_loss.py
main/: pyproject.toml
scripts/: poetry_build.sh  projects.sh
train/: pyproject.toml
train/fcos/train/: train.py
train/fcos/train/loss/: fcos_loss.py
train/linnaeus/train/: __init__.py  train.py  train_yolo.py
