[tool.poetry]
name = "linnaeus"
version = "0.1.0"
description = ""
authors = ["dthelegend <wampamba.daudi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.0.109"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
opencv-python = "^4.7.0.72"

[tool.poetry.extras]
visualise = ["matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
