[tool.poetry]
name = "linnaeus"
version = "0.1.0"
description = ""
authors = ["dthelegend <wampamba.daudi@gmail.com>"]
readme = "README.md"
packages = [{include = "linnaeus"}]

[tool.poetry.dependencies]
python = ">=3.8"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
opencv-python = "^4.7.0.72"
torch = "^2.0.1"
torchvision = "^0.15.2"

[tool.poetry.extras]
visualise = ["matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
