[tool.poetry]
name = "linnaeus-cli"
version = "0.1.0"
description = ""
authors = ["DTheLegend <wampamba.daudi@gmail.com>"]
readme = "README.md"
packages = [{include = "linnaeus"}]

[tool.poetry.dependencies]
python = "3.10.6"
linnaeus-core = "^0.1.0"
linnaeus-train = { version = "^0.1.0", optional = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
train = ["linnaeus-train"]
