[tool.poetry]
name = "linnaeus-core"
version = "0.1.7"
description = ""
authors = ["DTheLegend <wampamba.daudi@gmail.com>"]
readme = "README.md"
packages = [{include = "linnaeus"}]

[tool.poetry.dependencies]
python = "3.10.6"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.1%2Bcu117-cp310-cp310-win_amd64.whl" }
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
cli = ["linnaeus-cli"]
train = ["linnaeus-train"]
