[tool.poetry]
name = "fcos"
version = "0.1.0"
description = ""
authors = ["DTheLegend <wampamba.daudi@gmail.com>"]
readme = "README.md"
packages = [{include = "fcos"}]

[tool.poetry.dependencies]
python = "3.7.3"
torch = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[extras]