[tool.poetry]
name = "fcos"
version = "0.1.0"
description = ""
authors = ["DTheLegend <wampamba.daudi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
fcos-core = {path = "../core"}
fcos-cli = {path = "../cli", optional=true}
fcos-train = {path = "../train", optional=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
cli = ["fcos-cli"]
train = ["fcos-train"]
