[tool.poetry]
name = "linnaeus"
version = "0.1.0"
description = ""
authors = ["DTheLegend <wampamba.daudi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
linnaeus-core = {path = "../core"}
linnaeus-cli = {path = "../cli", optional=true}
linnaeus-train = {path = "../train", optional=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
cli = ["linnaeus-cli"]
train = ["linnaeus-train"]
